--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,24 @@ services:
     ports:
       - '6379:6379'
 
-  db:
+  booking-backend:
+    container_name: booking-backend
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    env_file:
+      - ./.env
+    environment:
+      - JAVA_TOOL_OPTIONS="-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"
+    ports:
+      - "8181:8181"
+      - "5005:5005"
+    depends_on:
+      - mysql
+    networks:
+      - booking-backend-app
+
+  mysql:
     image: mysql:8.0
     container_name: mysql
     restart: always
@@ -27,23 +44,6 @@ services:
     volumes:
       - data:/var/lib/mysql
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
-
-  es:
-    container_name: elastic_search
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.8.23
-    ports:
-      - 9200:9200
-      - 9300:9300
-    restart: unless-stopped
-    networks:
-      - booking-backend-app
-    volumes:
-      - booking-es:/usr/share/elasticsearch/data
-    environment:
-      - discovery.type=single-node
-      - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
 
   rabbitmq:
     image: rabbitmq:3
