--- a/pom.xml
+++ b/pom.xml
@@ -111,11 +111,6 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
 		<dependency>
@@ -147,6 +142,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>backend-drivor</finalName>
 	</build>
 
 </project>
