--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -4,7 +4,6 @@ pipeline {
     stages {
         stage('Compile and Clean') {
             steps {
-                sh 'mvn clean install'
             }
         }
         stage('Build Docker image'){
@@ -20,9 +19,8 @@ pipeline {
                 sh 'docker push nhathoang/jenkins_springboot_deploy:lastest'
             }
         }
-        stage('Docker deploy'){
+        stage('Heroku deploy'){
             steps {
-                sh 'docker run -itd -p  8081:8080 nhathoang/jenkins_springboot_deploy:lastest'
             }
         }
     }
