--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ DB_PORT=3306
 DB_NAME=bookingdb
 DB_USER=root
 DB_PASSWORD=hoangnhat
-REDIS_HOST=localhost
+REDIS_HOST=3.141.15.253
 REDIS_PORT=6379
-RABBITMQ_HOST=localhost
+RABBITMQ_HOST=3.139.77.150
 RABBITMQ_USERNAME=guest
 RABBITMQ_PASSWORD=guest
 RABBITMQ_PORT=15672
