--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -1,5 +1,8 @@
 pipeline {
     agent any
+    tools {
+        maven '3.6.3'
+    }
 
     environment {
     HEROKU_API_KEY = credentials('heroku-api-key')
